# movie-rating-system

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5aaf9d672e1c_create_initial_tables.py
app/: main.py
app/controller/: movie_controller.py  rating_controller.py
app/db/: database.py
app/exceptions/: handlers.py  http_exceptions.py
app/models/: __init__.py  association.py  director.py  genre.py  movie.py  movie_rating.py
app/repositories/: movie_repository.py  rating_repository.py
app/schemas/: common.py  movie.py  rating.py
app/services/: movie_service.py  rating_service.py
scripts/: seed.py
